<resources>
    <string name="app_name">Safe Restaurants</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="numer_of_issues_0">Number of issues: 0</string>
    <string name="last_inspection_x_days_ago">Last inspection: x days ago</string>
    <string name="non_critical_issues_found">\ Non-Critical Issues Found!</string>
    <string name="critical_issues_found">\ Critical Issues Found!</string>
    <string name="empty" translatable="false" />
    <string name="address">\Address: \</string>
    <string name="gps" translatable="false">\GPS: \</string>
    <string name="inspection">\Inspection \</string>
    <string name="days_ago">\ days ago: </string>
    <string name="inspection_on">Inspection on \</string>
    <string name="space" translatable="false">\ \</string>
    <string name="colon" translatable="false">\: \</string>
    <string name="textOffSet" translatable="false">\t\t\t\t\t\t</string>
    <string name="no_critical_issue_found">\t\t\t\t\t\tNo Critical Issue Found!</string>
    <string name="Line" translatable="false">"- "</string>
    <string name="no_non_critical_issue_found">\t\t\t\t\t\tNo Non-Critical Issue Found!</string>
    <string name="hazard_level_icon">hazard level icon</string>
    <string name="back">BACK</string>
    <string name="non_critical_issue_found">\ Non-Critical Issue Found!</string>
    <string name="critical_issue_found">\ Critical Issue Found!</string>
    <string name="zeroIssues">Number of issues: 0</string>
    <string name="numOfIssues">Number Of issues: </string>
    <string name="noInspection">No Inspections Done</string>
    <string name="lastInspection">Last Inspection: </string>
    <string name="daysAgo">\ days ago</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="violation_critical_rating_icon">violation critical rating icon</string>
    <string name="violation_category_icon">violation category icon</string>
    <string name="safe_restaurants">Safe Restaurants</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="hazard_level">"Hazard Level: "</string>
    <string name="date">"Date: "</string>
    <string name="type">"Type: "</string>
    <string name="critical_issues">"Critical Issues: "</string>
    <string name="non_critical_issue">"Non-Critical Issues: "</string>
    <string name="violation">"Violation: "</string>
    <string name="category">Category: %s</string>
    <string name="critical_rating">Critical Rating: %s</string>
    <string name="title_activity_maps">Map</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="Hazard_level">"Hazard level: "</string>
    <string name="end_line" translatable="false">\n</string>
    <string name="critical_Issues">Critical Issues: </string>
    <string name="advanced">Advanced</string>
    <string name="filter">Filter</string>
    <string name="search_filter">Search Filter</string>
    <string name="specific_hazard_level">Specific hazard level:</string>
    <string name="display_only_favorite">Display only favorite:</string>
    <string name="low_moderate_high">Ex: low, moderate, high</string>
    <string name="ex_0_1_2" translatable="false">Ex: 0,1,2,...</string>
    <string name="display_only_favorite_restaurants">Display only favorite restaurants</string>
    <string name="save">Save</string>
    <string name="mark_favorite">mark favorite</string>
    <string name="clear">Clear</string>
    <string name="searchInMenu">Search</string>
    <string name="error_message">Not an appropriate hazard level, please try again!</string>
    <string name="unmark_favorite">Unmark Favorite</string>
    <string name="updateFav">Updates to Favorite Restaurants</string>
    <string-array name="signs">
        <item>(None) </item>
        <item>&lt;=</item>
        <item>&gt;=</item>
    </string-array>
    <string name="updating">Updating data, Please wait..</string>
    <string name="cancelButton">Cancel</string>
    <string name="setting">Setting data, Please wait..</string>
    <string name="updatePrompt">Do you want to update your restaurant data?</string>
    <string name="updateTitle">Update Available</string>
    <string name="updateButton">Update</string>
    <string name="Food">Food</string>
    <string name="Pest">Pest</string>
    <string name="Equipment">Equipment</string>
    <string name="Sanitary">Sanitary</string>
    <string name="Employee">Employee</string>
    <string name="Building">Building</string>
    <string name="Qualifications">Qualifications</string>
    <string name="routine">Routine</string>
    <string name="follow_up">Follow-Up</string>
    <string name="critical">Critical</string>
    <string name="non_critical">Not Critical</string>
    <string name="favourites_only">Favourites only?</string>
    <string name="number_of_critical_issues">Number of critical issues...</string>
    <string name="search">Search...</string>
    <string name="search_field">Search Field:</string>
</resources>
